--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   },
   "dependencies": {
     "@astrojs/react": "^1.2.2",
+    "@astrojs/vue": "^1.2.2",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.6",
     "astro": "^1.8.0",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "vue": "^3.2.30"
   }
 }
